Added media icons

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -148,7 +148,7 @@ a.fp-splash-find-out-more {
     max-width: 300px;
     line-height: 25px;
 
-    font-size: 12px;
+    font-size: 19px;
 
     &:visited {
 	color: #fff !important;
@@ -168,7 +168,7 @@ a.fp-splash-find-out-more {
 }
 
 .btn-feedback {
-    background-color: #888;
+    background-color: #fff;
     width: 34px;
     font-size: 12px;
 
