Redirect getting-started--2 > getting-started

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
   </div>
 
   <div class="span4">
-    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/getting-started--2">Find Out More</a>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/getting-started">Find Out More</a>
   </div>
 
   <div class="span2">
