--- a/app/views/pages/video.html.erb
+++ b/app/views/pages/video.html.erb
@@ -29,7 +29,7 @@
 
 <div class="row">
   <div class="span3">
-    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/getting-started--2">Find Out More</a>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/getting-started">Find Out More</a>
   </div>
 
   <div class="span3">
@@ -38,7 +38,7 @@
 
   <div class="span3">
     <% if @video_no >= 3 %>
-    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/pages/get-coaching">Get Coaching</a>
+    <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/get-coaching">Get Coaching</a>
     <% else %>
     <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/video/<%= @video_no + 1%>">Next Video</a>
     <% end %>
