Added NPR logo to frontpage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -80,21 +80,25 @@
     <% end %>
   </div>
 
-  <div class="span1">&nbsp;</div>
-
   <div class="span2">
     <%= link_to "http://www.bbc.co.uk/news/education-15820786" do %>
-    <%= image_tag("/assets/press/bbc.jpeg", alt: "BBC logo", height:"20") %>
+    <%= image_tag("/assets/press/bbc.png", alt: "BBC logo", height:"20") %>
     <% end %>
   </div>
 
-  <div class="span1">&nbsp;</div>
   
   <div class="span3">
     <%= link_to "http://www.ted.com/talks/peter_singer_the_why_and_how_of_effective_altruism.html" do %>
-    <%= image_tag("/assets/press/ted_logo.gif", alt: "Washington Post", height:"100") %>
+    <%= image_tag("/assets/press/ted_logo.png", alt: "TED logo", height:"100") %>
     <% end %>
   </div>
+
+  <div class="span2">
+    <%= link_to "http://www.thetakeaway.org/2013/feb/28/want-give-back-get-job-wall-street/" do %>
+    <%= image_tag("/assets/press/npr.png", alt: "NPR logo", height:"60") %>
+    <% end %>
+  </div>
+
 </div>
 
 <div class="row">
