--- a/app/views/coaching_requests/new.html.haml
+++ b/app/views/coaching_requests/new.html.haml
@@ -5,7 +5,10 @@
       :markdown
         Do you care about making a big positive impact with your career, and want to use the latest evidence to increase the scale of your impact? If yes, then we can help.
 
-        *Note that we don’t have special expertise on issues covered by standard career advice, like how to write a CV, or how to get specific jobs. If this is what you’re after, check out a local careers service (like the [Oxford University Careers Service](http://www.careers.ox.ac.uk/)) and our list of [the best resources for planning your career](http://80000hours.org/blog/149-the-best-resources-for-planning-your-career).*
+        [We’re changing the way we do our careers coaching:](http://80000hours.org/blog/232-we-re-changing-our-career-coaching) we’re going to go more in-depth, and spend more time researching the specific questions that we think will help people have more impact. Unfortunately this means that we’re only going to be able to coach a small proportion of people who put in requests at the moment. If this isn’t you, we’re really sorry - but we hope that our findings will generalise to help many more people, and to expand to increase our capacity in the future.
+
+
+        To find out more about how career coaching works, go back to the [get coaching page](http://80000hours.org/get-coaching).
 
         # Request a Career Coaching Session
 
@@ -19,12 +22,22 @@
         = f.input :skype, placeholder: 'optional',
           hint: 'required if you are unable to come to our office in Oxford'
 
+
+        %h3
+          It would also really help us if you could briefly answer the following questions:
+
+        %br
+
+        = f.input :age, hint: "(This is so that we have an idea what stage you are at in your career.)"
+
         %label 
           %strong Which of the following statements best describe your current situation?
           - CoachingRequest::SituationOptions.each do |tag, option|
             %label
               = f.radio_button(:current_situation, tag)
               = option
+
+        %br
 
         %label 
           %strong For me, making the world a better place is:
@@ -33,19 +46,49 @@
               = f.radio_button(:wants_better_world, tag)
               = option
 
-        %strong How much do the following factors prevent you from having impact with your career?
+        %br
+        %br
+        = f.input :current_career_plans, :as => :text, label: "What are your current career plans or current thoughts on making a difference through your career?"
 
-        %label I don’t know what concrete options I have for an impactful career
-        - CoachingRequest::LimitingFactors.each do |tag, option|
-          %label
-            = f.radio_button(:dont_know_options, tag)
-            = option
+        %br
+        %br
+        = f.input :conterfactual_career_plans, :as => :text, label: "What would your career plans be if you hadn’t come across 80,000 Hours? <em>(We ask this to help us track our impact.)</em>"
 
-        %label I feel confused about how to choose between options given my unique situation
-        - CoachingRequest::LimitingFactors.each do |tag, option|
-          %label
-            = f.radio_button(:cant_decide, tag)
-            = option
+
+        %label 
+          %strong What causes do you most expect to use your career to work towards?
+          - CoachingRequest::CauseOptions.each do |tag, option|
+            %label
+              = f.radio_button(:wants_better_world, tag)
+              = option
+
+        = f.input :other_factors, label: "Other causes"
+        (We also have a list of 
+        = link_to "further potentially important causes",  "/other-causes"
+        )
+
+        %br
+        %br
+
+        %label 
+          %strong How likely do you think it is that you’ll want to work on a different cause in three years time?
+          - CoachingRequest::SwitchingCauseOptions.each do |tag, option|
+            %label
+              = f.radio_button(:current_career_plans, tag)
+              = option
+
+        %br
+        %br
+        = f.input :questions, :as => :text, label: "What are your main questions for a career coach?"
+        
+        %br
+
+        %p
+        = f.input :upload_cv, :as => :file, label: 'If you have a CV (even an old one) it would be helpful for us to have a look so that we can tailor our advice to you.'
+
+        %p
+          :markdown
+            *Before requesting careers advice, please make sure you’re familiar with our basic ideas by checking out [our videos](http://80000hours.org/getting-started) and some of our [key blog posts](http://80000hours.org/blog/188-what-should-i-read-if-i-m-new). It’s also worth looking at our list of [the best resources for planning your career](http://80000hours.org/blog/149-the-best-resources-for-planning-your-career).*
 
       .form-actions
         = f.button :submit, "Request session", :"data-loading-text" => "Please wait..."
