--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -13,7 +13,7 @@
 #new-member-survey {
   .main-section {
     margin-top: 40px;
-    > h3 { font-size: 22px; }
+    > h3 { font-size: 22px; color: rgb(80,80,80); }
     hr {
       margin-top: 20px;
       margin-bottom: 10px;
