Added uservoice plugin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     <%= auto_discovery_link_tag(:atom, "http://80000hours.org/blog/feed.atom") %>
 
     <%= render :partial => "/shared/google_analytics" %>
+    <%= render :partial => "/shared/uservoice.html" %>
   </head>
 
   <body>
