removing voting from codebase, with some of the comments and discussions

--- a/app/views/blog_posts/_display_heading.html.haml
+++ b/app/views/blog_posts/_display_heading.html.haml
@@ -1,6 +1,7 @@
+// Todo: what is this?
+
 .entry
   .heading
-    = render :partial => 'shared/voting', :locals => { :post => post, :post_type => "BlogPost" }
 
     %h3
       %a{:href => blog_post_path(post)}
