--- a/app/views/pages/video.html.erb
+++ b/app/views/pages/video.html.erb
@@ -98,7 +98,7 @@
   <div class="span3">
     <div class="fp-splash">
       <h2 id="our_community"><a href="/our-community">Our community</a></h2>
-      <p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>, find out more about <a href="/our-community">our community</a>, or post a question on our <a href="/discussion">discussion forum</a>.</p></div>
+      <p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>, find out more about <a href="/our-community">.</p></div>
   </div>
 
   <div class="span1">
