--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -107,7 +107,7 @@
                 - if profile.educations.length > 3
                   %a{ class: "see-more", id: "see-more-educations"}See more
 
-        - if !profile.donation_percentage_optout || user.donations.any?
+        - if !profile.donation_percentage_optout
           .section
             .title
             .body
@@ -120,22 +120,6 @@
                   .bar-container
                     .progress.progress-striped.progress-danger
                       .bar{:"data-percentage" => profile.donation_percentage}
-
-              -# only show donations to members
-              - if current_user && current_user.eighty_thousand_hours_member?
-                - donations = user.donations.order("date DESC")
-                - if donations.confirmed.is_public.size > 0
-                  .donations{:id => "#{user.slug}-donations"}
-                    %h2
-                      Donations
-                    %p
-                      %ul
-                        - donations.each do |donation|
-                          - if donation.public
-                            %li
-                              = render donation
-                    - if donations.length > 8
-                      %a{ class: "see-more", id: "see-more-donations"}See more
 
         -# only show skills to other members
         - if current_user && current_user.eighty_thousand_hours_member?
