header starting to be functional

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
  *= require_self
  *= require bootstrap
  *= require active_admin
+ *= require header
  *= require authentications
  *= require etk_applications
  *= require jquery-ui-1.8.17.custom
