--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,44 +36,53 @@
       <div class="container">
         <div class="row">
         <div class="logo span3">
-          <%= link_to image_tag('/assets/header/80kh_rect_logo.png'), '/', id: 'header-logo' %>
+          <%= link_to image_tag('/assets/header/80k-logo-small.png'), '/', id: 'header-logo' %>
         </div>
 				<!--start: Navigation -->
 				<div class="span9">
 					
 					<div class="navbar navbar-inverse">
 			    		<div class="navbar-inner">
-			          		<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-			            		<span class="icon-bar"></span>
-			            		<span class="icon-bar"></span>
-			            		<span class="icon-bar"></span>
-			          		</a>
 			          		<div class="nav-collapse collapse">
 			            		<ul class="nav">
-									<li ><a href="index.html">Home</a></li>
-			              			<li class="active"><a href="about.html">About</a></li>
-									<li class="dropdown">
-			                			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Features<b class="caret"></b></a>
+                        <li><a href="coaching">Coaching</a></li>
+                        <li class="dropdown">
+			                			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Research<b class="caret"></b></a>
 			                			<ul class="dropdown-menu">
 			                  				<li><a href="social-icons.html">Social Icons</a></li>
-											<li><a href="icons.html">Standard Icons</a></li>
-											<li><a href="icons_set2.html">Font Awesome Icons</a></li>
-											<li><a href="typography.html">Typography</a></li>
-											<li><a href="shortcodes.html">Shortcodes</a></li>
-											<li><a href="list-styles.html">List Styles</a></li>
+                                <li><a href="icons.html">Standard Icons</a></li>
+                                <li><a href="icons_set2.html">Font Awesome Icons</a></li>
+                                <li><a href="typography.html">Typography</a></li>
+                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <li><a href="list-styles.html">List Styles</a></li>
 			                			</ul>
 			              			</li>
-									<li class="dropdown" class="dropdown">
-			                			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio<b class="caret"></b></a>
-			                			<ul class="dropdown-menu">
-			                  				<li><a href="portfolio3.html">3 Columns</a></li>
-											<li><a href="portfolio4.html">4 Columns</a></li>
-			                			</ul>
-			              			</li>									
-									<li ><a href="services.html">Services</a></li>
-									<li ><a href="pricing.html">Pricing</a></li>
-									<li ><a href="blog.html">Blog</a></li>
-			              			<li ><a href="contact.html">Contact</a></li>
+                      <li class="dropdown" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supporters<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="faq">FAQ</a></li>
+                          <li><a href="portfolio4.html">Mission and History</a></li>
+                          <li><a href="portfolio4.html">Endorsements</a></li>
+                          <li><a href="portfolio4.html">Meet the Team</a></li>
+                          <li><a href="portfolio4.html">Contact Us</a></li>
+                          <li><a href="portfolio4.html">Media and History</a></li>
+                          <li><a href="portfolio4.html">Recruitement and History</a></li>
+                        </ul>
+                      </li>			
+                      <li class="dropdown" class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="faq">FAQ</a></li>
+                          <li><a href="portfolio4.html">Mission and History</a></li>
+                          <li><a href="portfolio4.html">Endorsements</a></li>
+                          <li><a href="portfolio4.html">Meet the Team</a></li>
+                          <li><a href="portfolio4.html">Contact Us</a></li>
+                          <li><a href="portfolio4.html">Media and History</a></li>
+                          <li><a href="portfolio4.html">Recruitement and History</a></li>
+                        </ul>
+                      </li>									
+                      <li ><a href="blog">Blog</a></li>
+                      <li ><a href="donate">Donate</a></li>
 			            		</ul>
 			          		</div>
 			        	</div>
