--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,27 +1,26 @@
-<% cache do %>
 <div class="row">
-  <div class="span1">
+  <div class="col-lg-1">
     &nbsp;
   </div>
 
-  <div class="span9">
+  <div class="col-lg-9">
     <div class="fp-splash">
       <h1 id="you_want_to_make_a_difference__but_you_have_questions">We want you to change the world</h1>
     </div>
   </div>
 
-  <div class="span2">
+  <div class="col-lg-1">
     &nbsp;
   </div>
 
 </div>
 
 <div class="row">
-  <div class="span1">
+  <div class="col-lg-1">
     &nbsp;
   </div>
 
-  <div class="span9">
+  <div class="col-lg-9">
     <div class="fp-splash">
       <p class="fp-sidebar">Based on the latest academic research, we offer in-depth advice to help you find the career where you can have the biggest possible positive impact.</p>
 
@@ -31,11 +30,11 @@
 </div>
 
 <div class="row">
-  <div class="span1">
+  <div class="col-lg-1">
     &nbsp;
   </div>
 
-  <div class="span9">
+  <div class="col-lg-9">
     <iframe id="big-video" width="640" height="360" src="http://www.youtube.com/embed/oihS0Cx8Lcs" frameborder="0" allowfullscreen></iframe>
   </div>
 
@@ -45,25 +44,25 @@
 </div>
 
 <div class="row">
-  <div class="span1">
+  <div class="col-lg-1">
     &nbsp;
   </div>
 
-  <div class="span4">
+  <div class="col-lg-4">
     <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/getting-started">Find Out More</a>
   </div>
 
-  <div class="span2">
+  <div class="col-lg-2">
     &nbsp;
   </div>
 
-  <div class="span3">
+  <div class="col-lg-3">
     <a class="fp-splash-find-out-more btn btn-primary btn-giant" href="/video/2">
       Next Video
     </a>
   </div>
 
-  <div class="span2">
+  <div class="col-lg-2">
     &nbsp;
   </div>
 </div>
@@ -122,7 +121,6 @@
 
   <div class="span3">
     <div class="fp-splash">
-      <h2 id="our_community"><a href="/our-community">Our community</a></h2>
       <p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>or find out more about <a href="/our-community">our community</a>. </p></div>
   </div>
 
@@ -160,4 +158,3 @@
   </div>
 </div>
 <hr> 
-<% end %>
