--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,15 +3,15 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require bootstrap
  *= require active_admin
- *= require header
  *= require authentications
  *= require etk_applications
  *= require jquery-ui-1.8.17.custom
  *= require datepicker
  *= require dashboard
  *= require template
+ *= require bootstrap3
+ *= require header2
 */
 
 // require header
