--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -1,20 +1,5 @@
 .blog
   .row
-    .span7
-      %br
-      = link_to '<i class="icon-arrow-left"></i> Back to the blog'.html_safe, blog_posts_path
+    .col-md-2
+    .col-md-10
       = render @post
-    .span1
-      &nbsp;
-    .span4
-      .box.sidebar.blog-sidebar
-        %p
-          .fblike
-            <fb:like href="#{blog_post_url(@post)}" send="false" width="450" show_faces="false"></fb:like>
-
-        = render :partial => "subscribe"
-        %hr
-        = render :partial => "popular_posts"        
-        %hr
-        = render :partial => "tag_cloud"
-        %hr
